# developer-workflow-env

./: .gitignore  Dockerfile  README.md  guidelines.txt  inference.py  openenv.yaml  problem_statement.txt  pyproject.toml  read_pdfs.py  requirements.txt  server.py  task_registry.py
envs/: __init__.py  base.py  code_review.py  data_triage.py  email_triage.py
graders/: __init__.py  code_review_grader.py  data_triage_grader.py  email_triage_grader.py
server/: __init__.py  app.py
tasks/: code_review_tasks.json  data_triage_tasks.json  email_triage_tasks.json
