[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-workflow-env"
version = "1.0.0"
description = "OpenEnv developer workflow automation benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "openai>=1.30.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"